--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=testaoniken;user=root;password=;"
+    "DefaultConnection": "Server=DESKTOP-LO4TCDE\\SQLAONIKEN;Database=TestAoniken;User Id=sa;Password=B8000ftq;"
   },
   "Logging": {
     "LogLevel": {
