--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-LO4TCDE\\SQLAONIKEN;Database=TestAoniken;User Id=sa;Password=B8000ftq;"
+    "DefaultConnection": "Server=DESKTOP-LO4TCDE\\SQLAONIKEN;Database=TestAoniken;User Id=;Password=;"
   },
   "Logging": {
     "LogLevel": {
