EmailService (no test)

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-LO4TCDE\\SQLAONIKEN;Database=TestAoniken;User Id=sa;Password=B8000ftq;"
   },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": "587",
+    "SmtpUser": "",
+    "SmtpPass": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
